# azure-gh-cicd-genai-rag-application

./: .gitignore  README.md  pyproject.toml
.github/workflows/: apply-infrastructure.yaml  apply-prerequisites.yaml  destroy-infrastructure.yaml
ai_service/: mcp_client.py  pyproject.toml
backend/: pyproject.toml
backend/src/: dependencies.py  main.py  mcp_client.py  mcp_server.py
backend/src/api/routes/: authentication.py  user.py
backend/src/domain/interfaces/: user_interface.py
backend/src/domain/schemas/: user.py
backend/src/domain/services/: user.py
backend/src/repository/: database.py
backend/src/repository/infrastructure/: user_repository.py
backend/src/repository/model/: user.py
backend/src/repository/models/: user.py
environment/: dev.tfvars.json  platform.json
infrastructure/: keyvault.tf  main.tf  openai.tf  postgres.tf  provider.tf  variables.tf
mcp_server/: mcp_server.py  pyproject.toml
oidc_config/: app_registration.tf  githubConfig.tf  main.tf  provider.tf
prerequisite/: app_registration.tf  githubConfig.tf  github_config.tf  keyvault.tf  main.tf  output.tf  variable.tf
prerequisites/: main.tf  main.tfplan  provider.tf  variables.tf
