[project]
name = "project-astralbound"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "fastapi>=0.128.0",
    "fastmcp==2.14.5",
    "logfire>=4.22.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.13",
    "tavily-python>=0.7.21",
    "uvicorn[standard]>=0.40.0",
]
